@@ -5,10 +5,9 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4FastStep.cc,v 1.6 1999-12-15 14:53:46 gunter Exp $
+// $Id: G4FastStep.cc,v 1.7 2000-05-30 08:30:36 mora Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
-//$Id:
 //---------------------------------------------------------------
 //
 //  G4FastStep.cc
