@@ -5,10 +5,9 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VFastSimulationModel.cc,v 1.3 1999-12-15 14:53:46 gunter Exp $
+// $Id: G4VFastSimulationModel.cc,v 1.4 2000-05-30 08:30:39 mora Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
-// $Id:
 //---------------------------------------------------------------
 //
 //  G4VFastSimulationModel.cc
