@@ -1,4 +1,4 @@
-$Id: History,v 1.6 1999-11-11 15:37:53 gunter Exp $
+$Id: History,v 1.7 2000-05-30 08:30:29 mora Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 30, 2000 M. Verderi & P. Mora de Freitas
+
+- parameterisation category is now RW free.
 
 September 16, 1999 M. Verderi & P. Mora de Freitas
 
